--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <h1>Indice</h1>
     <p>	Utilizando el menu para navegar entre: </p>
     <ul>	
-		<li><a href="Parte1/index.html">Parte1</a></li>
-		<li><a href="Parte2/index.html">Parte2</a></li>
-		<li><a href="Parte3/index.html">Parte3</a></li>
-		<li><a href="Parte4/index.html">Parte4</a></li>
-        <li><a href="Parte5/index.html">Parte5</a></li>
-        <li><a href="Parte6/index.html">Parte6</a></li>
+		<li><a href="parte1/index.html">Parte1</a></li>
+		<li><a href="parte2/index.html">Parte2</a></li>
+		<li><a href="parte3/index.html">Parte3</a></li>
+		<li><a href="parte4/index.html">Parte4</a></li>
+        <li><a href="parte5/index.html">Parte5</a></li>
+        <li><a href="parte6/index.html">Parte6</a></li>
 
     </ul>
     </body>
